[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "algovivo"
dynamic = ["version"]
dependencies = [
    "torch>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[tool.setuptools]
packages = ["algovivo"]

[tool.setuptools_scm]
root = "../.."
write_to = "utils/py/algovivo/_version.py"
local_scheme = "node-and-timestamp"